app/rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-statefulset
  labels:
    author: hari
spec:
  replicas: 3
  selector:
    matchLabels:
      service: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        service: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:1.0   
        ports:
        - containerPort: 5672
        - containerPort: 15672     
        volumeMounts:
          - name: rabbitmq-volume
            mountPath: /data/db           
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
