app/mongodb-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    tier: db
spec:
  clusterIP: None
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    service: mongodb
