app/rabbitmq-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    author: hari
spec:
  clusterIP: None
  ports:
  - port: 5672
    targetPort: 5672
  - port: 15672
    targetPort: 15672  
  selector:
    service: rabbitmq
