app/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    author: hari
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: 1000
    nginx.ingress.kubernetes.io/limit-rpm: 1000
spec:
  ingressClassName: nginx-example
  rules:
  - host: my-backend-service.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-service
            port: 
              number: 8080
