app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    author: hari
spec:
  ingressClassName: nginx-example
  rules:
  - host: my-frontend-service.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port: 
              number: 8080
